--- a/Hackathon_Tks/Hackathon_Tks/Base.lproj/LaunchScreen.storyboard
+++ b/Hackathon_Tks/Hackathon_Tks/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,73 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KOE-mJ-sZe">
+                                <rect key="frame" x="0.0" y="540" width="600" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Techkids Coding School" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2tz-ff-4CZ">
+                                        <rect key="frame" x="202" y="14" width="196.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.37254901959999998" green="0.71764705880000002" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="BaB-Bm-Gfd"/>
+                                    <constraint firstItem="2tz-ff-4CZ" firstAttribute="centerX" secondItem="KOE-mJ-sZe" secondAttribute="centerX" id="fH2-CN-S7B"/>
+                                    <constraint firstItem="2tz-ff-4CZ" firstAttribute="centerY" secondItem="KOE-mJ-sZe" secondAttribute="centerY" id="kVR-Lu-MKW"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EaM-NE-L1u">
+                                <rect key="frame" x="0.0" y="20" width="600" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TECHKIDS HACKATHON" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSF-g6-ps5">
+                                        <rect key="frame" x="156" y="15" width="288" height="30"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.37254901959999998" green="0.71764705880000002" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="tSF-g6-ps5" firstAttribute="centerY" secondItem="EaM-NE-L1u" secondAttribute="centerY" id="0Ye-LL-kdd"/>
+                                    <constraint firstItem="tSF-g6-ps5" firstAttribute="centerX" secondItem="EaM-NE-L1u" secondAttribute="centerX" id="bj5-aO-PTF"/>
+                                    <constraint firstAttribute="height" constant="60" id="mgF-kb-H0J"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eK6-i7-3bp">
+                                <rect key="frame" x="0.0" y="80" width="600" height="460"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đại chiến Hackathon Techkids Coding School" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKh-2C-mEH">
+                                        <rect key="frame" x="8" y="182.5" width="584" height="95.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.37254901959999998" green="0.71764705880000002" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="PKh-2C-mEH" secondAttribute="trailing" constant="8" id="Lao-sx-NTp"/>
+                                    <constraint firstItem="PKh-2C-mEH" firstAttribute="leading" secondItem="eK6-i7-3bp" secondAttribute="leading" constant="8" id="Wrx-Yk-OYf"/>
+                                    <constraint firstItem="PKh-2C-mEH" firstAttribute="centerX" secondItem="eK6-i7-3bp" secondAttribute="centerX" id="Z1U-x4-mSG"/>
+                                    <constraint firstItem="PKh-2C-mEH" firstAttribute="centerY" secondItem="eK6-i7-3bp" secondAttribute="centerY" id="w4m-H7-Drf"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="0.37254901960784315" green="0.71764705882352942" blue="0.37647058823529411" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="KOE-mJ-sZe" firstAttribute="top" secondItem="eK6-i7-3bp" secondAttribute="bottom" id="3Qr-pk-mka"/>
+                            <constraint firstAttribute="trailing" secondItem="KOE-mJ-sZe" secondAttribute="trailing" id="7d8-QU-gHr"/>
+                            <constraint firstItem="eK6-i7-3bp" firstAttribute="top" secondItem="EaM-NE-L1u" secondAttribute="bottom" id="ATf-cY-JwD"/>
+                            <constraint firstItem="KOE-mJ-sZe" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="CiU-PX-Rs3"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="KOE-mJ-sZe" secondAttribute="bottom" constant="10" id="XVg-gr-gqS"/>
+                            <constraint firstItem="EaM-NE-L1u" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="f2O-dr-czM"/>
+                            <constraint firstAttribute="trailing" secondItem="eK6-i7-3bp" secondAttribute="trailing" id="tFC-1z-T2d"/>
+                            <constraint firstItem="eK6-i7-3bp" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="ura-MU-QsN"/>
+                            <constraint firstItem="EaM-NE-L1u" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="20" id="w9O-tA-kDj"/>
+                            <constraint firstAttribute="trailing" secondItem="EaM-NE-L1u" secondAttribute="trailing" id="wSF-zQ-dFU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
