--- a/Hackathon_Tks/Hackathon_Tks/Base.lproj/Main.storyboard
+++ b/Hackathon_Tks/Hackathon_Tks/Base.lproj/Main.storyboard
@@ -29,34 +29,35 @@
                             <view alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aC5-zQ-Q0D">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search Lesson" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o0M-2l-QAH">
-                                        <rect key="frame" x="16" y="4" width="568" height="36"/>
-                                        <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <searchBar contentMode="redraw" placeholder="Search lessons" translatesAutoresizingMaskIntoConstraints="NO" id="JSQ-uK-JvJ">
+                                        <rect key="frame" x="16" y="0.0" width="568" height="44"/>
+                                        <color key="tintColor" red="0.37254901959999998" green="0.71764705880000002" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="barTintColor" red="0.37254901959999998" green="0.71764705880000002" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
-                                            <outlet property="delegate" destination="FAp-GM-sGE" id="FLz-vt-zbI"/>
+                                            <outlet property="delegate" destination="FAp-GM-sGE" id="u2d-6C-F8q"/>
                                         </connections>
-                                    </textField>
+                                    </searchBar>
                                 </subviews>
                                 <color key="backgroundColor" red="0.37254901959999998" green="0.71764705880000002" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="o0M-2l-QAH" firstAttribute="height" secondItem="aC5-zQ-Q0D" secondAttribute="height" constant="-8" id="0ke-Yb-E4o"/>
-                                    <constraint firstItem="o0M-2l-QAH" firstAttribute="top" secondItem="aC5-zQ-Q0D" secondAttribute="top" constant="4" id="7dD-Dh-upX"/>
-                                    <constraint firstItem="o0M-2l-QAH" firstAttribute="centerY" secondItem="aC5-zQ-Q0D" secondAttribute="centerY" id="RrJ-F6-xNp"/>
                                     <constraint firstAttribute="height" constant="44" id="V9x-gP-vov"/>
-                                    <constraint firstAttribute="bottom" secondItem="o0M-2l-QAH" secondAttribute="bottom" constant="4" id="azf-sq-ky1"/>
-                                    <constraint firstAttribute="trailing" secondItem="o0M-2l-QAH" secondAttribute="trailing" constant="16" id="ga4-cH-EO7"/>
-                                    <constraint firstItem="o0M-2l-QAH" firstAttribute="height" secondItem="aC5-zQ-Q0D" secondAttribute="height" id="ndH-f7-EfR"/>
-                                    <constraint firstItem="o0M-2l-QAH" firstAttribute="leading" secondItem="aC5-zQ-Q0D" secondAttribute="leading" constant="16" id="yGH-cs-YTi"/>
+                                    <constraint firstAttribute="bottom" secondItem="JSQ-uK-JvJ" secondAttribute="bottom" id="ldB-n7-bXA"/>
+                                    <constraint firstItem="JSQ-uK-JvJ" firstAttribute="leading" secondItem="aC5-zQ-Q0D" secondAttribute="leading" constant="16" id="nFa-A4-a9T"/>
+                                    <constraint firstAttribute="trailing" secondItem="JSQ-uK-JvJ" secondAttribute="trailing" constant="16" id="q2C-6Z-i6m"/>
+                                    <constraint firstItem="JSQ-uK-JvJ" firstAttribute="top" secondItem="aC5-zQ-Q0D" secondAttribute="top" id="ur2-0R-oYD"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="7dD-Dh-upX"/>
-                                        <exclude reference="azf-sq-ky1"/>
-                                        <exclude reference="ndH-f7-EfR"/>
-                                    </mask>
-                                </variation>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Lqw-it-LcG">
                                 <rect key="frame" x="0.0" y="64" width="600" height="487"/>
@@ -249,15 +250,36 @@
                                     <outlet property="delegate" destination="FAp-GM-sGE" id="HL9-tr-WiJ"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yfh-ud-udp">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search your favorite lesson :). Have a nice experience" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mnD-b0-QpA">
+                                        <rect key="frame" x="8" y="207.5" width="584" height="72"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <color key="textColor" red="0.37254901959999998" green="0.71764705880000002" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="mnD-b0-QpA" firstAttribute="centerY" secondItem="yfh-ud-udp" secondAttribute="centerY" id="Ffc-yr-MzH"/>
+                                    <constraint firstItem="mnD-b0-QpA" firstAttribute="centerX" secondItem="yfh-ud-udp" secondAttribute="centerX" id="VBx-Fi-F9E"/>
+                                    <constraint firstItem="mnD-b0-QpA" firstAttribute="leading" secondItem="yfh-ud-udp" secondAttribute="leading" constant="8" id="gU6-bL-6Iq"/>
+                                    <constraint firstAttribute="trailing" secondItem="mnD-b0-QpA" secondAttribute="trailing" constant="8" id="j95-k2-Gdf"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="yfh-ud-udp" firstAttribute="bottom" secondItem="Lqw-it-LcG" secondAttribute="bottom" id="3bi-mC-hHA"/>
                             <constraint firstItem="aC5-zQ-Q0D" firstAttribute="top" secondItem="QNO-Vr-Yic" secondAttribute="bottom" id="5oE-0d-MNz"/>
+                            <constraint firstItem="yfh-ud-udp" firstAttribute="trailing" secondItem="Lqw-it-LcG" secondAttribute="trailing" id="Ud8-5P-sNZ"/>
                             <constraint firstItem="MeC-v3-wa8" firstAttribute="top" secondItem="Lqw-it-LcG" secondAttribute="bottom" id="XX9-kT-gme"/>
                             <constraint firstItem="Lqw-it-LcG" firstAttribute="leading" secondItem="8Ng-AN-isT" secondAttribute="leading" id="ZUS-bb-7Px"/>
                             <constraint firstAttribute="trailing" secondItem="Lqw-it-LcG" secondAttribute="trailing" id="c5v-ur-Wh5"/>
                             <constraint firstItem="4l0-gV-mev" firstAttribute="top" secondItem="8Ng-AN-isT" secondAttribute="top" id="dW9-BC-VJp"/>
                             <constraint firstItem="aC5-zQ-Q0D" firstAttribute="leading" secondItem="8Ng-AN-isT" secondAttribute="leading" id="h3s-P7-HXl"/>
+                            <constraint firstItem="yfh-ud-udp" firstAttribute="leading" secondItem="Lqw-it-LcG" secondAttribute="leading" id="hv2-EG-zKK"/>
+                            <constraint firstItem="yfh-ud-udp" firstAttribute="top" secondItem="Lqw-it-LcG" secondAttribute="top" id="i8g-j4-M3a"/>
                             <constraint firstAttribute="trailing" secondItem="aC5-zQ-Q0D" secondAttribute="trailing" id="kas-GB-r7F"/>
                             <constraint firstAttribute="trailing" secondItem="4l0-gV-mev" secondAttribute="trailing" id="qpf-fT-9Gq"/>
                             <constraint firstItem="4l0-gV-mev" firstAttribute="leading" secondItem="8Ng-AN-isT" secondAttribute="leading" id="tqo-up-gaN"/>
@@ -266,8 +288,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" image="tabSearchIcon" id="5T3-I4-dQS"/>
                     <connections>
-                        <outlet property="searchTextField" destination="o0M-2l-QAH" id="F6I-C2-5bp"/>
+                        <outlet property="searchBar" destination="JSQ-uK-JvJ" id="HAp-C6-kHq"/>
                         <outlet property="tbl" destination="Lqw-it-LcG" id="Ngu-6U-Hsw"/>
+                        <outlet property="viewNil" destination="yfh-ud-udp" id="XTM-op-80c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v78-ie-muX" userLabel="First Responder" sceneMemberID="firstResponder"/>
